--- a/html/style.css
+++ b/html/style.css
@@ -2,7 +2,7 @@
     --SCALE: 1;
     --BGCOLOR1: #F8F8F8;
     --BGCOLOR2: #CCCCCC;
-    --ACCENT: #00596b;
+    --ACCENT: #9b9b83; /* #00596b;*/
     --FS1: calc( 10px * var(--SCALE));
     --FS2: calc( 13px * var(--SCALE));
     --FS3: calc( 17px * var(--SCALE));
@@ -91,11 +91,6 @@ select {
 }
 
 #map_canvas {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-}
-#iconTestCanvas {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -485,15 +480,15 @@ select.error, textarea.error, input.error {
 }
 
 .settingsCog {
-    width: calc( 48px * var(--SCALE));
-    height: calc( 48px * var(--SCALE));
+    width: calc( 32px * var(--SCALE));
+    height: calc( 32px * var(--SCALE));
     cursor: pointer;
     background-image: url('images/settings-icon02.png');
     background-size: cover;
     background-repeat: no-repeat;
     margin-top: calc( 6px * var(--SCALE));
     margin-bottom: calc( 6px * var(--SCALE));
-    margin-left: calc( -12px * var(--SCALE));
+    margin-left: calc( 4px * var(--SCALE));
 }
 
 #highlighted_infoblock {
